# gesture-recorder

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: viewer.perspective
launch/: gesture_record.launch  tool_rosbagextraction.launch  vision_system.launch
scripts/: recorder.py
workspace/: README.md
